--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="login-container">
     <h2>Login</h2>
-    <form id="loginForm">
+    <form id="loginForm" action="">
       <div class="input-group">
         <label for="username">Username</label>
         <input type="text" id="username" placeholder="Enter your username" required>
